# interlock-ai-v2

./: .gitignore  README.md  conftest.py  pyproject.toml
data/standards/: clauses.yaml
docs/: AUTHORSHIP.md  BACKLOG.md  DEMO_SCRIPT.md  FIXTURES.md  PIVOT_PLAN.md  PRD.md  TDD.md
docs/eval/: confidence_calibration.md
eval/results/: ab_comparison.json  doc_class.json  doc_class_report.md  per_class.json  per_class.md
fixtures/eval/: equipment_identity_gold.yaml  gold_cross_doc.yaml  gold_doc_class.yaml
fixtures/mutations/: MUTATIONS.md  PAGE_SCAN.md  apply_mutations.py
fixtures/pdfs/: HASHES.txt
fixtures/synthesis/: generate_bom.py  generate_civil_drawing.py  generate_coordination_study_v2.py  generate_equipment_spec_v2.py  generate_equipment_spec_v3.py  generate_hvac_schedule.py  generate_hvac_schedule_v2.py  generate_pid.py  generate_pid_v2.py  generate_relay_setting_sheet.py  generate_spec.py
scripts/: diagnose_entity_binding.py  diagnose_p6_y_alignment.py  diagnose_page6_fresh.py  diagnose_page_structures.py  page_scan.py  prototype_1_vision_extraction.py  prototype_1b_vision_diverse.py  prototype_2_per_token_bbox.py  prototype_2b_per_token_bbox_full.py  prototype_3_cross_doc_resolution.py  prototype_3b_cross_doc_real.py  run_ab.py  run_confidence_calibration.py  run_doc_class_eval.py  run_eval.py  run_per_class_flag_eval.py  source_real_pdfs.py
src/interlock/: adjudicator.py  logging_config.py  pipeline.py
tests/: conftest.py  test_adjudicator.py
tests/align/: test_aligned_pair_back_compat.py  test_canonical.py  test_claim_alignment.py  test_embed.py  test_exact.py  test_semantic.py
tests/detect/: test_authority_per_class.py  test_checklist.py  test_coupled.py  test_family.py  test_flag_dedup.py  test_mismatch.py  test_provenance_field.py  test_significance.py  test_significance_rag.py  test_tolerances.py  test_tolerances_per_class.py
tests/e2e/: test_pipeline.py  test_pipeline_v2.py
tests/eval/: test_calibration.py  test_cross_doc_default_safe_on_option1.py  test_doc_class_gate.py  test_doc_class_gold_well_formed.py  test_equipment_identity_gold.py  test_gold_assertion.py  test_harness.py  test_harness_cross_doc.py  test_per_class.py  test_per_class_gate.py
tests/extract/: test_canonical_names.py  test_context.py  test_dedup.py  test_entity_bind.py  (+5 more)
(+122 files in other folders)
